--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<meta http-equiv="refresh" content="0" url="https://cmerjm.github.io/html/main.html" />
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0" url="https://cmerjm.github.io/html/main.html" />
+</head>
