--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0" url="https://cmerjm.github.io/html/main.html" />
 </head>
+<body>
+</body>
