--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0" url="https://cmerjm.github.io/html/main.html" />
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0" url="https://cmerjm.github.io/html/main.html" />
+  </head>
+  <body>
+  </body>
+</html>
