--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0" url="https://cmerjm.github.io/html/main.html" />
   </head>
   <body>
+    Hello World
   </body>
 </html>
