--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url="https://cmerjm.github.io/html/main.html" />
+    <meta http-equiv="refresh" content="1;url="https://cmerjm.github.io/html/main.html">
+    <title>redirect</title>
   </head>
   <body>
   </body>
