--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;URL="https://cmerjm.github.io/html/main.html">
+    <meta http-equiv="refresh" content="1;URL="http://cmerjm.github.io/html/main.html">
     <title>redirect</title>
   </head>
   <body>
