--- a/html/indonesie.html
+++ b/html/indonesie.html
@@ -3,26 +3,35 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gastaldin Jessica</title>
-	<link href="css/reset.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-	<link href="css/design.css" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+	<link href="../css/design.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
 </head>
 
 <body>
-
-<div class="hautdepage">
-
-		<h1>Gastaldin Jessica</h1>
-		<nav class="lign1">
-<ul id="dropdownmenu">
-				<li class="aboutme"><a href="myhistory.html">About me<span>get to know me</span></a></li>
-				<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
-				<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
-				<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
-				<li><a href="Contact.html">Contact<span>i write about design</span></a></li>			</nav>
+		<div class="hautdepage">
+				<h1>Gastaldin Jessica</h1>
+					<nav class="lign1">
+						<ul id="dropdownmenu">
+							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
+									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
+											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
+									<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
+							 <li><a href="Contact.html">Contact<span>i write about design</span></a></li>
+						</ul>
+					</nav>
 		</div>
 
 <div id="corps">
