--- a/html/main.html
+++ b/html/main.html
@@ -3,54 +3,105 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gastaldin Jessica</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
 </head>
 
 <body>
-
-	<div class="hautdepage">
-			<h1>Gastaldin Jessica</h1>
-				<nav class="lign1">
-					<ul id="dropdownmenu">
-						<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
-							<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
-								<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
-										<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
-								<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
-						 <li><a href="Contact.html">Contact<span>i write about design</span></a></li>
-					</ul>
-				</nav>
-	</div>
-
-<div class="corps1"></div>
-	<div class= "font1"></div>
-
-<div class="bloc1">
-
-	<div class="col-g">
-<h2>INFOGRAPHISTE</h2>
-		<div class="text-center">
-				Dans ce webfolio, vous pouvez découvrir différentes réalisations  comme des montages photos, des supports Prints et des dessins.
-				<a class="button20" href="#cv-id.jpg">Regardez-moi</a>
+		<div class="hautdepage">
+				<h1>Gastaldin Jessica</h1>
+					<nav class="lign1">
+						<ul id="dropdownmenu">
+							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
+									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
+											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
+									<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
+							 <li><a href="Contact.html">Contact<span>i write about design</span></a></li>
+						</ul>
+					</nav>
 		</div>
+
+		<div class="container-black">
+		<div class="row-slider">
+
+	<div id="demo" class="carousel slide" data-ride="carousel">
+	  <ul class="carousel-indicators">
+	    <li data-target="#demo" data-slide-to="0" class="active"></li>
+	    <li data-target="#demo" data-slide-to="1"></li>
+	    <li data-target="#demo" data-slide-to="2"></li>
+	  </ul>
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img src="../img/montage/montage-monstre.jpg" alt="monstre" width="1100" height="500">
+	      <div class="carousel-caption">
+	        <h3>INFOGRAPHISTE</h3>
+
+	        <p>Dans ce webfolio, vous pouvez découvrir différentes réalisations  comme des montages photos, des supports Prints et des dessins.
+</p>
+	      </div>
+	    </div>
+	    <div class="carousel-item">
+	      <img src="../img/slider-img/slider-musilac.jpg" alt="musilac" width="1100" height="500">
+	      <div class="carousel-caption">
+
+	      </div>
+	    </div>
+	    <div class="carousel-item">
+	      <img src="../img/slider-img/mandala-slider.jpg" alt="mandala" width="1100" height="500">
+	      <div class="carousel-caption">
+	        <h3>Mandala</h3>
+	      </div>
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+	    <span class="carousel-control-prev-icon"></span>
+	  </a>
+	  <a class="carousel-control-next" href="#demo" data-slide="next">
+	    <span class="carousel-control-next-icon"></span>
+	  </a>
+	</div>
+</div>
+</div>
+</div>
+
+
+	<div class="row">
+	  	<div class="fa-container">
+
+	  	</div>
 	</div>
 
-
-</div>
-
-<div class="bloc8">
-	<div class="text-center2">
-				Bonjour,<br>
-				Je m'appelle Jessica Gastaldin, je suis actuellement dans une entreprise de commerce ou j'exerce le métier de mershandising depuis de nombreuses années.
-				Je me suis dirigé vers une formation d'infographiste car j'ai besoin d'evoluer ma créativité, de découvrir un autre domaine qui eveil ma curiosité.
-
+	<div class="parallax-wrapper">
+	    <div class="content">
+	        <p> Bonjour,<br>
+					Je m'appelle Jessica Gastaldin, je suis actuellement dans une entreprise de commerce ou j'exerce le métier de mershandising depuis de nombreuses années.
+					Je me suis dirigé vers une formation d'infographiste car j'ai besoin d'évoluer ma créativité, de découvrir un autre domaine qui éveil ma curiosité..
+	        </p>
+	    </div>
 	</div>
-</div>
+	<div class="navbar"><span>	<div class="text-center">
+<img src="../img/cv-id.jpg" class="rounded mx-auto d-block" alt="cv" width="40%">
+		</div></span></div>
 
-<div class="font2">
-	<img class="image" src="../img/cv-id.jpg" alt="cv"/>
-</div>
+	    <div class="content">
+	        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+	            Accusamus aliquam corporis delectus excepturi harum hic
+	            inventore iusto quae rem tempora.
+	        </p>
+	    </div>
 
 <div class="basdepage"></div>
 
