--- a/html/Contact.html
+++ b/html/Contact.html
@@ -3,31 +3,39 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gastaldin Jessica</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
 </head>
 
 <body>
-
-	<div class="hautdepage">
-			<h1>Gastaldin Jessica</h1>
-				<nav class="lign1">
-					<ul id="dropdownmenu">
-						<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
-						<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
-						<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
-						<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
-						<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
-						<li><a href="Contact.html">Contact<span>i write about design</span></a></li>
-					</ul>
-				</nav>
-	</div>
+		<div class="hautdepage">
+				<h1>Gastaldin Jessica</h1>
+					<nav class="lign1">
+						<ul id="dropdownmenu">
+							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
+									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
+											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
+									<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
+							 <li><a href="Contact.html">Contact<span>i write about design</span></a></li>
+						</ul>
+					</nav>
+		</div>
 					<div class="bloc">
-						<div class="paragraphe">Vous souhaitez obtenir plus d'informations? Vous voulez commencer un nouveau projet avec moi? N'attendez pas! Je prendrai le temps de vous répondre quelle que soit votre demande.
+							<img src="../img/plante-contact.jpg" class="contact-img" alt="contact">
+					<div class="paragraphe">Vous souhaitez obtenir plus d'informations ? Vous voulez commencer un nouveau projet avec moi ? N'attendez pas ! Je prendrai le temps de vous répondre quelle que soit votre demande.
 					</div>
 						</div>
 
@@ -87,34 +95,28 @@
 
 <footer>
 
-<div class="navigation">
-	<div class="large-4columns">
-../
-
-<h2> <span class="liste"></span>NAVIGATION</h2>
-
-<br>
-		<ul id"footer-navigation">
+	<div class="row">
+	  <div class="col-sm">
+			<ul id"footer-navigation">
+				<h2>NAVIGATION</h2>
    			 <li><a href="main.html">A propos</a></li>
    			 <li><a href="portfolio.html">Portfolio</a></li>
-    		<li><a href="inspiration.html">Inspiration</a></li>
+    		 <li><a href="inspiration.html">Inspiration</a></li>
    			 <li><a href="pictures.html">Photos</a></li>
    			 <li><a href="contact.html">Contact</a></li>
-		</ul>
-</div>
-	<div class="large-5columns">
+		</ul></div>
+	  <div class="col-sm">
+		<h2>ME CONTACTER</h2>
+		<br>
+		<p</p>
 
-<h2> <span class="liste"></span>ME CONTACTER</h2>
+		<div class="adresse">Gastaldin Jessica <br>18 rue Docteur Bordier<br> 38100 Grenoble</div>
+		<br>
+		     </div>
+	</div>
+
 <br>
-<b>Gastaldin Jessia</b>
 
-<div class="adresse">18 rue Docteur Bordier<br> 38100 Grenoble</div>
-<br>
-     </div>
-
-<div class="large-6columns">
-     </div>
-</div>
 </footer>
 				<div class="large-12columns">
 					<div class="bas-de-page">Gastaldin Jessica | 2018 | Infographiste</div>
