--- a/html/inspiration.html
+++ b/html/inspiration.html
@@ -3,45 +3,44 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gastaldin Jessica</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
-	<script src="../js/modernizr.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+	<script src="js/modernizr.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
 </head>
 
 <body>
-<div class="hautdepage">
-		<h1>Gastaldin Jessica</h1>
-			<nav class="lign1">
-				<ul id="dropdownmenu">
-					<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
-					<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
-					<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
-					<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
-					<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
-					<li><a href="Contact.html">Contact<span>i write about design</span></a></li>
-				</ul>
-			</nav>
-</div>
+		<div class="hautdepage">
+				<h1>Gastaldin Jessica</h1>
+					<nav class="lign1">
+						<ul id="dropdownmenu">
+							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
+									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
+											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
+									<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
+							 <li><a href="Contact.html">Contact<span>i write about design</span></a></li>
+						</ul>
+					</nav>
+		</div>
 
-<div id="corps1">
-
-<div class="bloc1">
-
-	<div class="col-g">
 <h2>INSPIRATION</h2>
 
 <div class="push">
 				<a class="button3" href="../img/inspiration/mandala16gold-RVB-site-statique.jpg">Utopie</a>
 				<a class="button3" href="../img/inspiration/painting-monomanie-bis_4-Récupéré.jpg">Monomanie</a>
 				<a class="button3" href="../img/inspiration/painting-coquillage.jpg">Shell</a>
-</div>
-
-	</div>
-</div>
-
 </div>
 
 <div class="bloc6">
@@ -57,11 +56,11 @@
 	</div>
 			<div class="col-dn">
 <figure class="cd-image-container">
-		<img class="maxwidth" src="../img/inspiration/mandala-NB-RVB-site-statique.png" alt="Original Image">
+		<img class="maxwidth" src="../img/inspiration/malada-dessin.jpg" alt="Original Image">
 		<span class="cd-image-label" data-type="original"></span>
 
 		<div class="cd-resize-img"> <!-- the resizable image on top -->
-			<img class="maxwidth" src="../img/inspiration/mandala-NB-RVB-site-statique.png" alt="Modified Image">
+			<img class="maxwidth" src="../img/inspiration/mandala-slider.jpg" alt="Modified Image">
 			<span class="cd-image-label" data-type="modified"></span>
 		</div>
 
@@ -80,7 +79,7 @@
 
 
 <figure class="cd-image-container">
-		<img class="maxwidth" src="../img/inspiration/monomanie.jpg" alt="Original Image">
+		<img class="maxwidth" src="../img/inspiration/coquillage.jpg" alt="Original Image">
 		<span class="cd-image-label" data-type="original"></span>
 
 		<div class="cd-resize-img"> <!-- the resizable image on top -->
@@ -148,11 +147,6 @@
 
 			</div>
 </div>
-
-<div class="col-d">
-	<img class="maxwidth" src="../img/montage/aja_grumh_source_08-Récupéré-Récupéré-Récupéré-RVB-site-statique.jpg" alt="montage"/>
-</div>
-
 
 <div class="basdepage"></div>
 
