--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -3,67 +3,199 @@
 <head>
 	<meta charset="utf-8">
 	<title>Gastaldin Jessica</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
 		<script src="../js/modernizr.js"></script>
+		<script src="../js/script.js"></script>
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<div class="hautdepage">
-		<h1>Gastaldin Jessica</h1>
-			<nav class="lign1">
-				<ul id="dropdownmenu">
-					<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
-					<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
-					<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
-					<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
-					<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
-					<li><a href="Contact.html">Contact<span>i write about design</span></a></li>
-				</ul>
-		</nav>
-</div>
-
-<div id="corps1">
-		<div class="bloc1">
-				<div class="col-g">
-							<h2>CREATION</h2>
-
-						<div class="text-center"></div>
-				</div>
+		<div class="hautdepage">
+				<h1>Gastaldin Jessica</h1>
+					<nav class="lign1">
+						<ul id="dropdownmenu">
+							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
+									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
+											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
+									<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
+							 <li><a href="Contact.html">Contact<span>i write about design</span></a></li>
+						</ul>
+					</nav>
 		</div>
+
+
+		<h2>PORTFOLIO</h2>
+		<div id="myBtnContainer">
+		  <button class="btn active" onclick="filterSelection('all')"> Tout voir</button>
+		  <button class="btn" onclick="filterSelection('stage')"> Stages</button>
+		  <button class="btn" onclick="filterSelection('charte')"> Chartes graphiques</button>
+		</div>
+
+		<div class="push">
+						<a class="button3" href="../img/inspiration/mandala16gold-RVB-site-statique.jpg">Tout voir</a>
+						<a class="button3" href="../img/clic&copie/Pub-rentree.4-RR-RVB.jpg">Stages</a>
+						<a class="button3" href="../img/illusion RVB site statique/illusion.jpg">Charte graphique</a>
+		</div>
+
+			<div class="bloc20">
+
+<div class="container" style="margin-top:30px;">
+  <div class="row">
+
+  <div class="column stage">
+      <div class="hovereffect">
+        <img class="img-responsive" src="../img/biere-site-statique/Sans titre-1.jpg" alt="page2">
+        <div class="overlay">
+          <h2>Mandarin</h2>
+				  <a href="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"><p>LINK HERE</a></p>
+        </div>
+			</div>
+	</div>
+
+<div class="column stage">
+      <div class="hovereffect">
+        <img class="img-responsive" src="../img/logo-novacteur.jpg" alt="page2">
+        <div class="overlay">
+          <h2>Novacteur</h2>
+				  <a href="taille-image2" src="../img/biere-site-statique/sans titre-1.jpg" alt="biere"><p>LINK HERE</a></p>
+        </div>
+      </div>
 </div>
 
-<div class="bloc20">
-					<a href="../img/biere-site-statique/Brochure-biere-recette-mandrin2.jpg" alt="page2">
-					<img class="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"/>
-							<a href="../img/couveture-peau-verte.01pdf.jpg" alt="couverture">
-							<img class="taille-image2" src="../img/index_novacteur-logo.png" alt="couverture">
-								<a href="../img/clic&copie/flyer.R.jpg" alt="flyer">
-								<img class="taille-image2" src="../img/clic&copie/Dernier logo Julien.RVB-site-statique.png" alt="logo">
-					  			 <a href="../img/illusion RVB site statique/charte-graphique-PFE-RVB2.jpg" alt="couverture">
-									 <img class="taille-image2" src="../img/illusion RVB site statique/charte-graphique-PFE-RVB.jpg" alt="musilac"/>
-									  <a href="../img/musilac/page.3-4RVB.jpg" alt="page2">
-							      <img class="taille-image2" src="../img/musilac/couvRVB.jpg" alt="musilac"/>
-						          <a href="../img/big-foot-RVB-site-statique/indesign projet big foot2.jpg" alt="couverture">
-						        	<img class="taille-image2" src="../img/big-foot-RVB-site-statique/indesign projet big foot.jpg" alt="couverture">
-
-	<div class="taille-image2"><img class="taille-image2" src="../img/Vin-R-indd.jpg" alt="vin"/></div>
-</div>
-
-<div class="bloc6">
-
-</div>
-
-<div class="bloc6">
-			<div class="col-d">
-				<div class="font"></div>
+<div class="column stage">
+			<div class="hovereffect">
+				<img class="img-responsive" src="../img/clic&copie/logo-portfoli.jpg" alt="page2">
+				<div class="overlay">
+					<h2>Clic&Copie</h2>
+					<a href="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"><p>LINK HERE</a></p>
+				</div>
 			</div>
 </div>
 
 
+<div class="column charte">
+			<div class="hovereffect">
+				<img class="img-responsive" src="../img/illusion RVB site statique/illusion.jpg" alt="page2">
+				<div class="overlay">
+					<h2>Illusion</h2>
+					<a href="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"><p>LINK HERE</a></p>
+				</div>
+			</div>
+</div>
+
+<div class="column charte">
+				<div class="hovereffect">
+					<img class="img-responsive" src="../img/musilac/musilac.jpg" alt="musilac" alt="page2">
+					<div class="overlay">
+						<h2>Musilac</h2>
+						<a href="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"><p>LINK HERE</a></p>
+					</div>
+				</div>
+</div>
+
+<div class="column charte">
+				<div class="hovereffect">
+					<img class="img-responsive" src="../img/big-foot-RVB-site-statique/big_foot.jpg" alt="page2">
+					<div class="overlay">
+						<h2>Big Foot</h2>
+						<a href="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"><p>LINK HERE</a></p>
+					</div>
+				</div>
+</div>
+
+<div class="column charte">
+				      <div class="hovereffect">
+				        <img class="img-responsive" src="../img/vin.jpg" alt="page2">
+				        <div class="overlay">
+				          <h2>Vin</h2>
+								  <a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+				        </div>
+								</div>
+				      </div>
+
+</div>
+<div class="column stage">
+											      <div class="hovereffect">
+											        <img class="img-responsive" src="../img/montage/aja_grumh_source_08-Récupéré-Récupéré-Récupéré-RVB-site-statique.jpg" alt="montage"/>
+											        <div class="overlay">
+											          <h2>Montage</h2>
+															  <a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+											        </div>
+															</div>
+											      </div>
+
+<div class="column stage">
+									<div class="hovereffect">
+										<img class="img-responsive" src="../img/montage/elephant.jpg	" alt="montage"/>
+										<div class="overlay">
+											<h2>Montage</h2>
+											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+										</div>
+										</div>
+									</div>
+
+<div class="column charte">
+									<div class="hovereffect">
+										<img class="img-responsive" src="../img/clic&copie/Pub-rentree.4-RR-RVB.jpg	" alt="stage"/>
+
+										<div class="overlay">
+											<h2>Rentrée de classes</h2>
+											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+										</div>
+										</div>
+									</div>
+
+<div class="column charte">
+									<div class="hovereffect">
+										<img class="img-responsive" src="../img/couverture-peau-verte-RVB.jpg" alt="stage"/>
+											<img class="img-responsive" src="../img/sommaire-RVB.jpg" alt="stage"/>
+										<div class="overlay">
+											<h2>Marques pages</h2>
+											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+										</div>
+										</div>
+									</div>
+
+<div class="column stage">
+									<div class="hovereffect">
+										<img class="img-responsive" src="../img/clic&copie/flyer.R.jpg	" alt="montage"/>
+										<div class="overlay">
+											<h2>Flyers</h2>
+											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+										</div>
+									</div>
+									</div>
+
+<div class="column charte">
+									<div class="hovereffect">
+										<img class="img-responsive" src="../img/montage/elephant.jpg	" alt="montage"/>
+										<div class="overlay">
+											<h2>Montage</h2>
+											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+										</div>
+									</div>
+									</div>
+
+<div class="column stage">
+									<div class="hovereffect">
+										<img class="img-responsive" src="../img/montage/elephant.jpg	" alt="montage"/>
+										<div class="overlay">
+											<h2>Montage</h2>
+											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+										</div>
+									</div>
+</div>
+ 	</div>
+
+</div>
+			</div>
 
 <div class="basdepage"></div>
 <footer>
