change index and delete html/main.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<title>Gastaldin Jessica</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-	<link href="../css/design.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="css/design.css" rel="stylesheet">
   <style>
   /* Make the image fully responsive */
   .carousel-inner img {
@@ -24,12 +24,14 @@
 				<h1>Gastaldin Jessica</h1>
 					<nav class="lign1">
 						<ul id="dropdownmenu">
-							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
-								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
-									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
-											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
-									<li class="pictures"><a href="pictures.html">pictures<span>roadtrip</span></a></li>
-							 <li><a href="Contact.html">Contact<span>i write about design</span></a></li>
+							<!-- Pas très utile, même plus compliquer pour l'utilisateur -->
+							<li class="aboutme"><a href="index.html">About me<span>get to know me</span></a></li>
+
+							<li class="portfolio"><a href="html/portfolio.html">Portfolio<span>my work</span></a></li>
+							<li class="Inspiration"><a href="html/inspiration.html">Inspiration<span>where ideas get born</span></a></li>
+							<!--<li><a href="html/photos.html">Photos<span>i like to photograph</span></a></li>-->
+							<li class="pictures"><a href="html/pictures.html">pictures<span>roadtrip</span></a></li>
+							<li><a href="html/Contact.html">Contact<span>i write about design</span></a></li>
 						</ul>
 					</nav>
 		</div>
@@ -54,13 +56,13 @@
 	      </div>
 	    </div>
 	    <div class="carousel-item">
-	      <img src="../img/slider-img/slider-musilac.jpg" alt="musilac" width="1100" height="500">
+	      <img src="img/slider-img/slider-musilac.jpg" alt="musilac" width="1100" height="500">
 	      <div class="carousel-caption">
 
 	      </div>
 	    </div>
 	    <div class="carousel-item">
-	      <img src="../img/slider-img/mandala-slider.jpg" alt="mandala" width="1100" height="500">
+	      <img src="img/slider-img/mandala-slider.jpg" alt="mandala" width="1100" height="500">
 	      <div class="carousel-caption">
 	        <h3>Mandala</h3>
 	      </div>
@@ -93,7 +95,7 @@
 	    </div>
 	</div>
 	<div class="navbar"><span>	<div class="text-center">
-<img src="../img/cv-id.jpg" class="rounded mx-auto d-block" alt="cv" width="40%">
+<img src="img/cv-id.jpg" class="rounded mx-auto d-block" alt="cv" width="40%">
 		</div></span></div>
 
 	    <div class="content">
@@ -112,11 +114,11 @@
 <h2> <span class="liste"></span>NAVIGATION</h2>
 <br>
 			<ul id"footer-navigation">
-   			 <li><a href="myhistory.html">A propos</a></li>
-   			 <li><a href="portfolio.html">Portfolio</a></li>
-    		 <li><a href="inspiration.html">Inspiration</a></li>
-   			 <li><a href="australie.html">Photos</a></li>
-   			 <li><a href="contact.html">Contact</a></li>
+   			 <li><a href="html/myhistory.html">A propos</a></li>
+   			 <li><a href="html/portfolio.html">Portfolio</a></li>
+    		 <li><a href="html/inspiration.html">Inspiration</a></li>
+   			 <li><a href="html/australie.html">Photos</a></li>
+   			 <li><a href="html/contact.html">Contact</a></li>
 		</ul>
 	</div>
 
@@ -129,7 +131,7 @@
   </div>
 
 		 <div class="large-6columns">
-			 <a class="button2" href="contact.html">Contactez-moi</a>
+			 <a class="button2" href="html/contact.html">Contactez-moi</a>
 		</div>
 </div>
 </footer>
