path monstre.jpeg modified

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  </ul>
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
-	      <img src="../img/montage/montage-monstre.jpg" alt="monstre" width="1100" height="500">
+	      <img src="img/montage/montage-monstre.jpg" alt="monstre" width="1100" height="500">
 	      <div class="carousel-caption">
 	        <h3>INFOGRAPHISTE</h3>
 
