--- a/html/pictures.html
+++ b/html/pictures.html
@@ -34,15 +34,59 @@
 					</nav>
 		</div>
 <h2>ROAD TRIP</h2>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-left">
+            <li><a href="#">Left</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-center">
+            <li><a href="#">Center 1</a></li>
+            <li><a href="#">Center 2</a></li>
+            <li><a href="#">Center 3</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Right</a></li>
+        </ul>
+    </div>
+</nav>
 
-<div class="push">
-				<a class="button3" href="../img/inspiration/mandala16gold-RVB-site-statique.jpg">Indonésie</a>
-				<a class="button3" href="../img/inspiration/painting-monomanie-bis_4-Récupéré.jpg">Australie</a>
-				<a href="../img/inspiration/painting-coquillage.jpg">Barcelone</a>
+<div id="myBtnContainer">
+	<button class="btn active" onclick="filterSelection('indoneie')">Tout voir</button>
+	<button class="btn" onclick="filterSelection('stage')"> Indonesie</button>
+	<button class="btn" onclick="filterSelection('barcelone')">Barcelone</button>
+<button class="btn" onclick="filterSelection('australie')">Australie</button>
+
+
 </div>
 
 
 <div class="bloc20">
+
+<div class="container" style="margin-top:30px;">
+<div class="row">
+
+<div class="column indonesie">
+<div class="hovereffect">
+	<img class="img-responsive" src="../img/biere-site-statique/Sans titre-1.jpg" alt="page2">
+	<div class="overlay">
+		<h2>Mandarin</h2>
+		<a href="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"><p>LINK HERE</a></p>
+	</div>
+</div>
+</div>
+
+</div>
+</div>
+
+
+
 		<a href="taille-image2" src="../img/indonesie/IMG_6368R.jpg" alt="indonesie"/>
 			<img class="taille-image2" src="../img/australie/IMGP7609.JPG" alt="australie"/>
 				<img class="taille-image2" src="../img/australie/IMGP8123.JPG" alt="australie"/>
@@ -59,7 +103,6 @@
 						<img class="taille-image2" src="../img/barcelone/IMG_7720.JPG" alt="barcelone"/>
 					<img class="taille-image2" src="../img/barcelone/Sans titre-1.jpg" alt="barcelone"/>
  			<img class="taille-image2" src="../img/barcelone/IMG_7717.JPG" alt="barcelone"/>
-	</div>
 
 <div class="basdepage"></div>
 
