--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -5,22 +5,31 @@
 	<title>Gastaldin Jessica</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Shadows+Into+Light" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
 		<script src="../js/modernizr.js"></script>
 		<script src="../js/script.js"></script>
-
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+	<style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
+
 </head>
 
 <body>
 		<div class="hautdepage">
-				<h1>Gastaldin Jessica</h1>
+				<h1>JG</h1>
 					<nav class="lign1">
 						<ul id="dropdownmenu">
-							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+							<li class="aboutme"><a href="index.html">About me<span>get to know me</span></a></li>
 								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
 									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
 											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
@@ -33,23 +42,33 @@
 
 		<h2>PORTFOLIO</h2>
 		<div id="myBtnContainer">
-		  <button class="btn active" onclick="filterSelection('all')"> Tout voir</button>
+		  <button class="btn active" onclick="filterSelection('all')">All</button>
 		  <button class="btn" onclick="filterSelection('stage')"> Stages</button>
 		  <button class="btn" onclick="filterSelection('charte')"> Chartes graphiques</button>
+			<button class="btn" onclick="filterSelection('montage')"> Montages</button>
+			<button class="btn" onclick="filterSelection('autre')"> Other projects</button>
+
+
 		</div>
 
-		<div class="push">
-						<a class="button3" href="../img/inspiration/mandala16gold-RVB-site-statique.jpg">Tout voir</a>
-						<a class="button3" href="../img/clic&copie/Pub-rentree.4-RR-RVB.jpg">Stages</a>
-						<a class="button3" href="../img/illusion RVB site statique/illusion.jpg">Charte graphique</a>
-		</div>
 
-			<div class="bloc20">
+
 
 <div class="container" style="margin-top:30px;">
   <div class="row">
 
-  <div class="column stage">
+
+		  <div class="column autre">
+		      <div class="hovereffect">
+		        <img class="img-responsive" src="../img/.jpg" alt="page2">
+		        <div class="overlay">
+		          <h2>Mandarin</h2>
+						  <a href="taille-image2" src="../img/biere-site-statique/Brochure-biere-recette.jpg" alt="biere"><p>LINK HERE</a></p>
+		        </div>
+					</div>
+			</div>
+
+  <div class="column autre">
       <div class="hovereffect">
         <img class="img-responsive" src="../img/biere-site-statique/Sans titre-1.jpg" alt="page2">
         <div class="overlay">
@@ -90,7 +109,7 @@
 			</div>
 </div>
 
-<div class="column charte">
+<div class="column autre">
 				<div class="hovereffect">
 					<img class="img-responsive" src="../img/musilac/musilac.jpg" alt="musilac" alt="page2">
 					<div class="overlay">
@@ -110,7 +129,7 @@
 				</div>
 </div>
 
-<div class="column charte">
+<div class="column autre">
 				      <div class="hovereffect">
 				        <img class="img-responsive" src="../img/vin.jpg" alt="page2">
 				        <div class="overlay">
@@ -120,8 +139,20 @@
 								</div>
 				      </div>
 
+
+							<div class="column autre">
+											      <div class="hovereffect">
+											        <img class="img-responsive" src="../img/portfolio/mockup affiche publicitaire SWISS.jpg" alt="page2">
+											        <div class="overlay">
+											          <h2>SWISS</h2>
+															  <a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
+											        </div>
+															</div>
+											      </div>
+
+
 </div>
-<div class="column stage">
+<div class="column montage">
 											      <div class="hovereffect">
 											        <img class="img-responsive" src="../img/montage/aja_grumh_source_08-Récupéré-Récupéré-Récupéré-RVB-site-statique.jpg" alt="montage"/>
 											        <div class="overlay">
@@ -131,7 +162,7 @@
 															</div>
 											      </div>
 
-<div class="column stage">
+<div class="column montage">
 									<div class="hovereffect">
 										<img class="img-responsive" src="../img/montage/elephant.jpg	" alt="montage"/>
 										<div class="overlay">
@@ -141,7 +172,7 @@
 										</div>
 									</div>
 
-<div class="column charte">
+<div class="column stage">
 									<div class="hovereffect">
 										<img class="img-responsive" src="../img/clic&copie/Pub-rentree.4-RR-RVB.jpg	" alt="stage"/>
 
@@ -152,10 +183,9 @@
 										</div>
 									</div>
 
-<div class="column charte">
+<div class="column stage">
 									<div class="hovereffect">
 										<img class="img-responsive" src="../img/couverture-peau-verte-RVB.jpg" alt="stage"/>
-											<img class="img-responsive" src="../img/sommaire-RVB.jpg" alt="stage"/>
 										<div class="overlay">
 											<h2>Marques pages</h2>
 											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
@@ -172,27 +202,8 @@
 										</div>
 									</div>
 									</div>
-
-<div class="column charte">
-									<div class="hovereffect">
-										<img class="img-responsive" src="../img/montage/elephant.jpg	" alt="montage"/>
-										<div class="overlay">
-											<h2>Montage</h2>
-											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
-										</div>
-									</div>
-									</div>
-
-<div class="column stage">
-									<div class="hovereffect">
-										<img class="img-responsive" src="../img/montage/elephant.jpg	" alt="montage"/>
-										<div class="overlay">
-											<h2>Montage</h2>
-											<a href="taille-image2" src="../img/Vin-R-indd.jpg" alt="biere"><p>LINK HERE</a></p>
-										</div>
-									</div>
 </div>
- 	</div>
+
 
 </div>
 			</div>
@@ -219,7 +230,7 @@
 	<div class="large-5columns">
 
 
-<h2> <span class="liste"></span>ME CONTACTER</h2>
+<h2> <span class="liste"></span>CONTACT ME</h2>
 <br>
 <b>Gastaldin Jessia</b>
 
@@ -231,7 +242,7 @@
 
 <div class="large-6columns">
 	<div>
-		<a class="button2" href="contact.html">Contactez-moi</a>
+		<a class="button2" href="contact.html">Contact me</a>
 	</div>
 </div>
 
@@ -239,7 +250,7 @@
 </footer>
 
 <div class="large-12columns">
-				<div class="bas-de-page">Gastaldin Jessica | 2018 | Infographiste | 07.69.27.56.24</div>
+				<div class="bas-de-page">Gastaldin Jessica | 2018 | Infographiste</div>
 </div>
 </body>
 </html>
