--- a/html/Contact.html
+++ b/html/Contact.html
@@ -5,6 +5,8 @@
 	<title>Gastaldin Jessica</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Shadows+Into+Light" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -21,10 +23,10 @@
 
 <body>
 		<div class="hautdepage">
-				<h1>Gastaldin Jessica</h1>
+			<h1>JG</h1>
 					<nav class="lign1">
 						<ul id="dropdownmenu">
-							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+							<li class="aboutme"><a href="index.html">About me<span>get to know me</span></a></li>
 								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
 									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
 											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
@@ -35,53 +37,47 @@
 		</div>
 					<div class="bloc">
 							<img src="../img/plante-contact.jpg" class="contact-img" alt="contact">
-					<div class="paragraphe">Vous souhaitez obtenir plus d'informations ? Vous voulez commencer un nouveau projet avec moi ? N'attendez pas ! Je prendrai le temps de vous répondre quelle que soit votre demande.
+														    <div class="content">
+							        <p>Do you wish to obtain more information ? Want to start a new project with me? Do not wait ! I will take the time to answer you whatever your request.</p>
+							    </div>
+							</div>
+
+
+<section id="contact">
+			<div class="section-content">
+				<h1 class="section-header">Get in <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Touch with us</span></h1>
+			</div>
+			<div class="contact-section">
+			<div class="container">
+				<form>
+					<div class="col-md-6 form-line">
+			  			<div class="form-group">
+			  				<label for="exampleInputUsername">Your name</label>
+					    	<input type="text" class="form-control" id="" placeholder="">
+				  		</div>
+				  		<div class="form-group">
+					    	<label for="exampleInputEmail">Email Address</label>
+					    	<input type="email" class="form-control" id="exampleInputEmail" placeholder="">
+					  	</div>
+					  	<div class="form-group">
+					    	<label for="telephone">Mobile No.</label>
+					    	<input type="tel" class="form-control" id="telephone" placeholder="">
+			  			</div>
+			  		</div>
+			  		<div class="col-md-6">
+			  			<div class="form-group">
+			  				<label for ="description"> Message</label>
+			  			 	<textarea  class="form-control" id="description" placeholder=""></textarea>
+			  			</div>
+			  			<div>
+
+			  				<button type="button" class="btn btn-default submit">	<i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
+			  			</div>
+
 					</div>
-						</div>
-
-		<div id="corps1">
-
-			<div class= "font">
-
-				<div class="colonnegauche">
-
-					<h2>N'HESITEZ PAS, CONTACTEZ MOI !</h2>
-
-					<form id="myform" class="cssform" action="">
-
-						<p><label for="user">Nom :</label>
-							<input type="text" id="user" value="" /></p>
-
-							<p><label for="emailaddress">Email :</label>
-								<input type="text" id="emailaddress" value="" /></p>
-
-								<p><label for="comments">Message :</label>
-									<textarea id="comments" rows="5" cols="25"></textarea></p>
-								</form>
-				</div>
-				<div class="colonnedroite">
-
-								<div class="formulaire10columns">
-
-									<h2>MES COORDONNÉES</h2>
-
-									<div class="coordonnees">
-
-										<img class="icon1" src="../img/icones/user-2.png" alt="moi"/>
-										<p><b>Jessica Gastaldin</b></p><br>
-
-										<img class="icon1" src="../img/icones/home.png" alt="home"/>
-										<p><b>18 rue Docteur Bordier</b></p>
-										<p><b>38100 Grenoble</b></p><br>
-
-										<img class="icon1" src="../img/icones/phone-call.png" alt="tél"/>
-										<p><b>07 69 27 56 24</b></p><br>
-
-
-										<img class="icon1" src="../img/icones/message.png" alt="mail"/>
-										<p><b>cmjmer3@gmail.com</b></p><br>
-
-									</div>
+				</form>
+			</div>
+		</section>
 
 								</div>
 				</div>
@@ -99,14 +95,14 @@
 	  <div class="col-sm">
 			<ul id"footer-navigation">
 				<h2>NAVIGATION</h2>
-   			 <li><a href="main.html">A propos</a></li>
+   			 <li><a href="index.html">A propos</a></li>
    			 <li><a href="portfolio.html">Portfolio</a></li>
     		 <li><a href="inspiration.html">Inspiration</a></li>
    			 <li><a href="pictures.html">Photos</a></li>
    			 <li><a href="contact.html">Contact</a></li>
 		</ul></div>
 	  <div class="col-sm">
-		<h2>ME CONTACTER</h2>
+		<h2>CONTACT ME</h2>
 		<br>
 		<p</p>
 
