--- a/html/pictures.html
+++ b/html/pictures.html
@@ -5,8 +5,11 @@
 	<title>Gastaldin Jessica</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Shadows+Into+Light" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
+	<script src="../js/modernizr.js"></script>
+	<script src="../js/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
@@ -21,10 +24,10 @@
 
 <body>
 		<div class="hautdepage">
-				<h1>Gastaldin Jessica</h1>
+			<h1>JG</h1>
 					<nav class="lign1">
 						<ul id="dropdownmenu">
-							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+							<li class="aboutme"><a href="index.html">About me<span>get to know me</span></a></li>
 								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
 									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
 											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
@@ -127,7 +130,7 @@
 	<div class="large-5columns">
 
 
-<h2><span class="liste"></span>ME CONTACTER</h2>
+<h2><span class="liste"></span>CONTACT ME</h2>
 <br>
 <b>Gastaldin Jessia</b>
 
@@ -139,7 +142,7 @@
 
 		 <div class="large-6columns">
 			 <div>
-				 	<a class="button2" href="contact.html">Contactez-moi</a>
+				 	<a class="button2" href="contact.html">COntact me</a>
 			</div>
  		</div>
 </div>
@@ -148,7 +151,7 @@
 
 </footer>
 		<div class="large-12columns">
-				<div class="bas-de-page">Gastaldin Jessica | 2018 | Infographiste | 07.69.27.56.24</div>
+				<div class="bas-de-page">Gastaldin Jessica | 2018 | Infographiste</div>
 		</div>
 </body>
 </html>
