--- a/html/inspiration.html
+++ b/html/inspiration.html
@@ -5,6 +5,7 @@
 	<title>Gastaldin Jessica</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Shadows+Into+Light" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 	<link href="../css/design.css" rel="stylesheet">
 	<script src="js/modernizr.js"></script>
@@ -22,10 +23,10 @@
 
 <body>
 		<div class="hautdepage">
-				<h1>Gastaldin Jessica</h1>
+			<h1>JG</h1>
 					<nav class="lign1">
 						<ul id="dropdownmenu">
-							<li class="aboutme"><a href="main.html">About me<span>get to know me</span></a></li>
+							<li class="aboutme"><a href="index.html">About me<span>get to know me</span></a></li>
 								<li class="portfolio"><a href="portfolio.html">Portfolio<span>my work</span></a></li>
 									<li class="Inspiration"><a href="inspiration.html">Inspiration<span>where ideas get born</span></a></li>
 											<!--<li><a href="photos.html">Photos<span>i like to photograph</span></a></li>-->
@@ -35,10 +36,15 @@
 					</nav>
 		</div>
 
+
+
+
+
+
 <h2>INSPIRATION</h2>
 
 <div class="push">
-				<a class="button3" href="../img/inspiration/mandala16gold-RVB-site-statique.jpg">Utopie</a>
+				<a class="button3" href="../img/inspiration/mandala-slider.jpg">Utopie</a>
 				<a class="button3" href="../img/inspiration/painting-monomanie-bis_4-Récupéré.jpg">Monomanie</a>
 				<a class="button3" href="../img/inspiration/painting-coquillage.jpg">Shell</a>
 </div>
@@ -50,13 +56,12 @@
 			<div class="textportfolio">
 					<h2>UTOPIE</h2>
 						<br>
-				Réalisation d'un mandala sous illustrator.
-			</div>
+Realization of a mandala under illustrator.			</div>
 		</div>
 	</div>
 			<div class="col-dn">
 <figure class="cd-image-container">
-		<img class="maxwidth" src="../img/inspiration/malada-dessin.jpg" alt="Original Image">
+		<img class="maxwidth" src="../img/inspiration/mandala-R.jpg" alt="Original Image">
 		<span class="cd-image-label" data-type="original"></span>
 
 		<div class="cd-resize-img"> <!-- the resizable image on top -->
@@ -79,7 +84,7 @@
 
 
 <figure class="cd-image-container">
-		<img class="maxwidth" src="../img/inspiration/coquillage.jpg" alt="Original Image">
+		<img class="maxwidth" src="../img/inspiration/monomanie.jpg" alt="Original Image">
 		<span class="cd-image-label" data-type="original"></span>
 
 		<div class="cd-resize-img"> <!-- the resizable image on top -->
@@ -102,14 +107,12 @@
 
 						<h2>MONOMANIE</h2>
 						<br>
-				Dans le cadre de la formation j'ai réalisé un dessin que j'ai ensuite retravaillé sur Illustrator.
-				J'ai voulu représenter un coeur qui symbolise la vie en utilisant des formes géométriques pour transformer cette forme organique en objet abstrait.
-				Pour cela j'ai assemblé des formes triangulaires pour avoir un aspect géométrique en utilisant des couleurs de tons froids afin d'apperçoir d'avantage le volume des ces formes,nous pouvons distinguer le chapeau de la poule en guise de coquillage.
+						As part of the training I made a drawing that I then reworked on Illustrator.
+		I wanted to represent a heart that symbolizes life by using geometric shapes to transform this organic form into an abstract object.
+		For that I assembled triangular shapes to have a geometrical appearance by using colors of cold tones to better understand the volume of these forms, we can distinguish the hat of the hen as a shell.
 					</div>
 				</div>
 		</div>
-
-
 </div>
 
 <div class="bloc6">
@@ -123,8 +126,8 @@
 			<div class="textportfolio">
 			<h2>SHELL</h2>
 						<br>
-				Dans le cadre de la formation j'ai réalisé un dessin que j'ai ensuite retravaillé sur Illustrator.
-				Je suis partie également sur des formes géométriques pour créer le dos du coquillage suivi de plusieurs courbes pour illustrer le corps.
+						As part of the training I made a drawing that I then reworked on Illustrator.
+		I also left on geometric shapes to create the back of the shell followed by several curves to illustrate the body.
 			</div>
 		</div>
 	</div>
@@ -160,10 +163,10 @@
 
 <br>
 		<ul id"footer-navigation">
-   			 <li><a href="myhistory.html">A propos</a></li>
+   			 <li><a href="index.html">A propos</a></li>
    			 <li><a href="portfolio.html">Portfolio</a></li>
     		<li><a href="inspiration.html">Inspiration</a></li>
-   			 <li><a href="australie.html">Photos</a></li>
+   			 <li><a href="pictures.html">Photos</a></li>
    			 <li><a href="contact.html">Contact</a></li>
 		</ul>
 </div>
@@ -171,7 +174,7 @@
 	<div class="large-5columns">
 
 
-<h2> <span class="liste"></span>ME CONTACTER</h2>
+<h2> <span class="liste"></span>CONTACT ME</h2>
 <br>
 <b>Gastaldin Jessia</b>
 
@@ -184,7 +187,7 @@
 <div class="large-6columns">
 
 	<div>
-		<a class="button2" href="contact.html">Contactez-moi</a>
+		<a class="button2" href="contact.html">Contact me</a>
 	</div>
      </div>
 
@@ -197,7 +200,7 @@
 
 </footer>
 		<div class="large-12columns">
-				<div class="bas-de-page">Gastaldin Jessica | 2018 | Infographiste | 07.69.27.56.24</div>
+				<div class="bas-de-page">Gastaldin Jessica | 2018 | Infographiste</div>
 		</div>
 </body>
 </html>
